--- a/app/one.html
+++ b/app/one.html
@@ -12,14 +12,14 @@
 
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css"/>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/app/styles/main.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/app/styles/main.css" type="text/css"/>
     <!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="/bower_components/modernizr/modernizr.js"></script>
+    <link as="javascript" href="https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/bower_components/modernizr/modernizr.js" type="text/javascript"/>
     <!-- endbuild -->
 
   </head>
