--- a/app/one.html
+++ b/app/one.html
@@ -37,35 +37,35 @@
         <div u="loading" style="position: absolute; top: 0px; left: 0px;">
           <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block;top: 0px; left: 0px; width: 100%; height: 100%;">
           </div>
-          <div style="position: absolute; display: block; background: url(images/icons/loading.gif) no-repeat center center;
+          <div style="position: absolute; display: block; background: url(https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/app/https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/app/images/icons/loading.gif) no-repeat center center;
           top: 0px; left: 0px; width: 100%; height: 100%;">
         </div>
       </div>
       <!-- Slides Container -->
       <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1300px; height: 500px; overflow: hidden;">
         <div>
-          <img u="image" src2="images/dental/one.png" />
+          <img u="image" src2="https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/app/images/dental/one.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 350px; height: 30px; background-color: rgba(39,124,145, 0.35); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">
             image, text, and custom layers
           </div>
 
         </div>
         <div>
-          <img u="image" src2="images/dental/two.png" />
+          <img u="image" src2="https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/app/images/dental/two.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 350px; height: 30px; background-color: rgba(39,124,145, 0.35); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">
             image, text, and custom layers
           </div>
 
         </div>
         <div>
-          <img u="image" src2="images/dental/one.png" />
+          <img u="image" src2="https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/app/images/dental/one.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 350px; height: 30px; background-color: rgba(39,124,145, 0.35); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">
             image, text, and custom layers
           </div>
 
         </div>
         <div>
-          <img u="image" src2="images/dental/two.png" />
+          <img u="image" src2="https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/app/images/dental/two.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 350px; height: 30px; background-color: rgba(39,124,145, 0.35); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">
             image, text, and custom layers
           </div>
