--- a/app/one.html
+++ b/app/one.html
@@ -12,14 +12,14 @@
 
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css"/>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/app/styles/main.css" type="text/css"/>
+    <link rel="stylesheet" href="styles/one.css" type="text/css"/>
     <!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
-    <link as="javascript" href="https://raw.githubusercontent.com/xhrist14n/sliders_jssor/master/bower_components/modernizr/modernizr.js" type="text/javascript"/>
+    <script href="/bower_components/modernizr/modernizr.js" type="text/javascript"></script>
     <!-- endbuild -->
 
   </head>
@@ -107,8 +107,8 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/jssor-slider/js/jssor.slider.mini.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.js" type="text/javascript"></script>
+    <script src="/bower_components/jssor-slider/js/jssor.slider.mini.js" type="text/javascript"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -130,7 +130,7 @@
 
 
     <!-- build:js scripts/main.js -->
-    <script src="scripts/main.js"></script>
+    <script src="scripts/one.js" type="text/javascript" ></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
