--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="javascripts/scale.fix.js"></script>
     
   </body>
