--- a/app/index.html
+++ b/app/index.html
@@ -12,14 +12,14 @@
 
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="/bower_components/modernizr/modernizr.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
 
   </head>
@@ -37,35 +37,35 @@
         <div u="loading" style="position: absolute; top: 0px; left: 0px;">
           <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block;top: 0px; left: 0px; width: 100%; height: 100%;">
           </div>
-          <div style="position: absolute; display: block; background: url(images/icons/loading.gif) no-repeat center center;
+          <div style="position: absolute; display: block; background: url(https://xhrist14n.github.io/sliders_jssor/app/images/icons/loading.gif) no-repeat center center;
           top: 0px; left: 0px; width: 100%; height: 100%;">
         </div>
       </div>
       <!-- Slides Container -->
       <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1300px; height: 500px; overflow: hidden;">
         <div>
-          <img u="image" src2="images/dental/one.png" />
+          <img u="image" src2="https://xhrist14n.github.io/sliders_jssor/app/images/dental/one.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 350px; height: 30px; background-color: rgba(39,124,145, 0.35); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">
             image, text, and custom layers
           </div>
 
         </div>
         <div>
-          <img u="image" src2="images/dental/two.png" />
+          <img u="image" src2="https://xhrist14n.github.io/sliders_jssor/app/images/dental/two.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 350px; height: 30px; background-color: rgba(39,124,145, 0.35); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">
             image, text, and custom layers
           </div>
 
         </div>
         <div>
-          <img u="image" src2="images/dental/one.png" />
+          <img u="image" src2="https://xhrist14n.github.io/sliders_jssor/app/images/dental/one.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 350px; height: 30px; background-color: rgba(39,124,145, 0.35); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">
             image, text, and custom layers
           </div>
 
         </div>
         <div>
-          <img u="image" src2="images/dental/two.png" />
+          <img u="image" src2="https://xhrist14n.github.io/sliders_jssor/app/images/dental/two.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 350px; height: 30px; background-color: rgba(39,124,145, 0.35); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">
             image, text, and custom layers
           </div>
@@ -107,25 +107,25 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/jssor-slider/js/jssor.slider.mini.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/jquery/dist/jquery.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/jssor-slider/js/jssor.slider.mini.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
 
     <!-- build:js(.) scripts/plugins.js -->
-    <script src="/bower_components/bootstrap/js/affix.js"></script>
-    <script src="/bower_components/bootstrap/js/alert.js"></script>
-    <script src="/bower_components/bootstrap/js/dropdown.js"></script>
-    <script src="/bower_components/bootstrap/js/tooltip.js"></script>
-    <script src="/bower_components/bootstrap/js/modal.js"></script>
-    <script src="/bower_components/bootstrap/js/transition.js"></script>
-    <script src="/bower_components/bootstrap/js/button.js"></script>
-    <script src="/bower_components/bootstrap/js/popover.js"></script>
-    <script src="/bower_components/bootstrap/js/carousel.js"></script>
-    <script src="/bower_components/bootstrap/js/scrollspy.js"></script>
-    <script src="/bower_components/bootstrap/js/collapse.js"></script>
-    <script src="/bower_components/bootstrap/js/tab.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/js/affix.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/js/alert.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/js/dropdown.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/js/tooltip.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/js/modal.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/js/transition.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/js/button.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/js/popover.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/js/carousel.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/js/scrollspy.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/js/collapse.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/bootstrap/js/tab.js"></script>
     <!-- endbuild -->
 
 
