project sliders wowslider

--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="https://xhrist14n.github.io/sliders_jssor/app/favicon.ico">
+    <link rel="apple-touch-icon" href="https://xhrist14n.github.io/sliders_jssor/app/apple-touch-icon.png">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css(.) styles/vendor.css -->
@@ -16,7 +16,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://xhrist14n.github.io/sliders_jssor/app/styles/main.css">
     <!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="https://xhrist14n.github.io/sliders_jssor/bower_components/modernizr/modernizr.js"></script>
@@ -130,7 +130,7 @@
 
 
     <!-- build:js scripts/main.js -->
-    <script src="scripts/main.js"></script>
+    <script src="https://xhrist14n.github.io/sliders_jssor/app/scripts/main.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
