project sliders wowslider

--- a/app/single.html
+++ b/app/single.html
@@ -14,28 +14,37 @@
         <div>
           <img u="image" src2="https://xhrist14n.github.io/sliders_jssor/app/images/dental/one.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 650px; height: 200px; background-color: rgba(39,124,145, 0.35); font-size: 40px; color: #ffffff; line-height: 30px; text-align: center;">
-            image, text, and custom layers
+            <div style="margin-top:20px;">
+                  image, text, and custom layers
+              </div>
           </div>
 
         </div>
         <div>
           <img u="image" src2="https://xhrist14n.github.io/sliders_jssor/app/images/dental/two.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 650px; height: 200px; background-color: rgba(39,124,145, 0.35); font-size: 40px; color: #ffffff; line-height: 30px; text-align: center;">
-            image, text, and custom layers
+              <div style="margin-top:20px;">
+                  image, text, and custom layers
+              </div>
+            
           </div>
 
         </div>
         <div>
           <img u="image" src2="https://xhrist14n.github.io/sliders_jssor/app/images/dental/one.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 650px; height: 200px; background-color: rgba(39,124,145, 0.35); font-size: 40px; color: #ffffff; line-height: 30px; text-align: center;">
-            image, text, and custom layers
+            <div style="margin-top:20px;">
+                  image, text, and custom layers
+              </div>
           </div>
 
         </div>
         <div>
           <img u="image" src2="https://xhrist14n.github.io/sliders_jssor/app/images/dental/two.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 650px; height: 200px; background-color: rgba(39,124,145, 0.35); font-size: 40px; color: #ffffff; line-height: 30px; text-align: center;">
-            image, text, and custom layers
+            <div style="margin-top:20px;">
+                  image, text, and custom layers
+              </div>
           </div>
 
         </div>
