project sliders wowslider

--- a/app/single.html
+++ b/app/single.html
@@ -14,7 +14,7 @@
         <div>
           <img u="image" src2="https://xhrist14n.github.io/sliders_jssor/app/images/dental/one.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 650px; height: 200px; background-color: rgba(39,124,145, 0.35); font-size: 50px; color: #ffffff; line-height: 30px; text-align: center;">
-            <div style="margin-top:20px;margin-bottom:20px;">
+            <div style="margin-top:20px;margin-bottom:20px;padding: 5px;">
                   image, text, and custom layers
               </div>
           </div>
@@ -23,7 +23,7 @@
         <div>
           <img u="image" src2="https://xhrist14n.github.io/sliders_jssor/app/images/dental/two.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 650px; height: 200px; background-color: rgba(39,124,145, 0.35); font-size: 50px; color: #ffffff; line-height: 30px; text-align: center;">
-              <div style="margin-top:20px;margin-bottom:20px;">
+              <div style="margin-top:20px;margin-bottom:20px;padding: 5px;">
                   image, text, and custom layers
               </div>
             
@@ -33,7 +33,7 @@
         <div>
           <img u="image" src2="https://xhrist14n.github.io/sliders_jssor/app/images/dental/one.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 650px; height: 200px; background-color: rgba(39,124,145, 0.35); font-size: 50px; color: #ffffff; line-height: 30px; text-align: center;">
-            <div style="margin-top:20px;margin-bottom:20px;">
+            <div style="margin-top:20px;margin-bottom:20px;padding: 5px;">
                   image, text, and custom layers
               </div>
           </div>
@@ -42,7 +42,7 @@
         <div>
           <img u="image" src2="https://xhrist14n.github.io/sliders_jssor/app/images/dental/two.png" />
           <div data-u="caption" data-t="4" style="position: absolute; top: 30px; left: 30px; width: 650px; height: 200px; background-color: rgba(39,124,145, 0.35); font-size: 50px; color: #ffffff; line-height: 30px; text-align: center;">
-            <div style="margin-top:20px;margin-bottom:20px;">
+            <div style="margin-top:20px;margin-bottom:20px;padding: 5px;">
                   image, text, and custom layers
               </div>
           </div>
